--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@
     server_port=2025
 
 [properties]
-    update_schedule_time = 6 # as a fraction of 24 hours
+    update_check_rate = 30
     update_source = "https://github.com/Advait-Nair/AdvaCCTV"
 
     daemon_sends_chunk_size = 5000
